# cc-experiment-runner

./: .gitignore  LICENSE  README.md  pyproject.toml
prompts/: start-no-plugin.txt  start-plugin.txt  start.txt
src/cc_experiment_runner/: __main__.py  benchmarks.py  claude.py  cli.py  config.py  diffstats.py  git.py  logger.py  manifest.py  process.py  state.py
src/cc_performance_analysis/: __main__.py  benchmarks.py  claude.py  cli.py  config.py  git.py  logger.py  process.py  state.py
