[project]
name = "cc-experiment-runner"
version = "0.1.0"
description = "Autonomous Claude Code experiment runner"
requires-python = ">=3.12"
dependencies = [
    "cc-bench-schema",
]

[tool.uv.sources]
cc-bench-schema = { git = "https://github.com/antonykamp/cc-bench-schema.git" }

[project.scripts]
cc-run-experiments = "cc_experiment_runner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_experiment_runner"]
